crates/nuff_linter/src/diagnostic/render/snapshots/nuff_linter__diagnostic__render__full__tests__notebook_output_with_diff.snap
---
source: crates/nuff_db/src/diagnostic/render/full.rs
expression: env.render_diagnostics(&diagnostics)
---
error[F401][*]: `os` imported but unused
 --> notebook.ipynb:cell 1:2:8
  |
1 | # cell 1
2 | import os
  |        ^^
help: Remove unused import: `os`
 ::: cell 1
  |
1 | # cell 1
  - import os
  |

error[F401][*]: `math` imported but unused
 --> notebook.ipynb:cell 2:2:8
  |
1 | # cell 2
2 | import math
  |        ^^^^
3 |
4 | print('hello world')
  |
help: Remove unused import: `math`
 ::: cell 2
  |
1 | # cell 2
  - import math
2 |
  |

error[F841][*]: Local variable `x` is assigned to but never used
 --> notebook.ipynb:cell 3:4:5
  |
2 | def foo():
3 |     print()
4 |     x = 1
  |     ^
help: Remove assignment to unused variable `x`
 ::: cell 3
  |
3 |     print()
  -     x = 1
4 |
  |
note: This is an unsafe fix and may change runtime behavior
