crates/nuff_linter/src/diagnostic/render/snapshots/nuff_linter__diagnostic__render__full__tests__notebook_output_with_diff_spanning_cells.snap
---
source: crates/nuff_db/src/diagnostic/render/full.rs
expression: env.render(&diagnostic)
---
error[F401][*]: `os` imported but unused
 --> notebook.ipynb:cell 1:2:8
  |
1 | # cell 1
2 | import os
  |        ^^
help: Remove unused import: `os`
 ::: cell 1
  |
1 | # cell 1
  - import os
  |
 ::: cell 2
  |
1 | # cell 2
  - import math
2 |
  |
 ::: cell 3
  |
3 |     print()
  -     x = 1
4 |
  |
note: This is an unsafe fix and may change runtime behavior
